# arm_simulator-1.5

./: .gitignore  Makefile.am  Makefile.in  arm_branch_other.c  arm_branch_other.h  arm_branch_other_test.c  arm_constants.c  arm_constants.h  arm_core.c  arm_data_processing.c  arm_data_processing_test.c  arm_exception.c  arm_instruction.c  arm_load_store.c  arm_simulator  exception_handlers.c  exception_handlers.h  memory.c  memory.h  memory_test  memory_test.c  registers.c  registers.h  registers_test  send_irq  werror.h
.deps/: arm_data_processing_test.Tpo
Examples/: Makefile.am  Makefile.in  bi1  bi2  bi2.s  brch1.s  brch2.s  dtprcs1.s  dtprcs1_autotest.gdb  dtprcs2.s  dtprcs2_autotest.gdb  dtprcs3.s  dtprcs3_autotest.gdb  example1  example2  example3  example4  excpt.s  expt  expt.s  handlers.s  insertion_sort  ldst1.s  ldst2.s  ldst3.s  ldst_mult1.s  ldst_mult2.s  ldst_mult_PC.s  load_test.s  mult3.s  mult4.s  prog1.s  prog2.s  prog3.s  prog4.s
journal_logs/: bouchra.txt  duc.txt  maxim.txt  rafael.txt  sanaa.txt  youssef.txt
